--- a/homeowner/templates/email/welcome.html
+++ b/homeowner/templates/email/welcome.html
@@ -242,7 +242,7 @@
                                                                                 </tr>
                                                                                 <tr>
                                                                                     <td align="center" class="esd-block-text es-p20t es-m-txt-c">
-                                                                                        <p><a style="color:white" target="_blank" href="{% url 'homeowner:unsubscribe' id %}" class="unsubscribe">Unsubscribe</a></p>
+                                                                                        <p><a style="color:white" target="_blank" href="https://grazemylawn.herokuapp.com/unsubscribe/{{id}}" class="unsubscribe">Unsubscribe</a></p>
                                                                                     </td>
                                                                                 </tr>
                                                                             </tbody>
