--- a/homeowner/templates/email/welcome.html
+++ b/homeowner/templates/email/welcome.html
@@ -31,7 +31,7 @@
 				<v:fill type="tile" src="https://jamesmeyerphoto.com/wp-content/uploads/2017/09/Additional-1953-Night-Pasture-10.jpg" color="#223748" origin="0.5, 0" position="0.5,0"></v:fill>
 			</v:background>
 		<![endif]-->
-        <table class="es-wrapper" width="100%" cellspacing="0" cellpadding="0" background="https://jamesmeyerphoto.com/wp-content/uploads/2017/09/Additional-1953-Night-Pasture-10.jpg" style="background-position: center top;">
+        <table class="es-wrapper" width="100%" cellspacing="0" cellpadding="0" background="https://cdn.shortpixel.ai/client/q_glossy,ret_img,w_2000/https://lushlawncaregallatin.com/wp-content/uploads/2018/06/cropped-8c68d46d2ac0e4e2689298db13dc9a5f-8.jpg" style="background-position: center top;">
             <tbody>
                 <tr>
                     <td class="esd-email-paddings" valign="top" style="padding:5px;">
