--- a/homeowner/templates/homeowner/thankyou.html
+++ b/homeowner/templates/homeowner/thankyou.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="container">
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="jumbotron text-center">
                 <h1 class="display-3">Thank You! {{name}}</h1>
                 <p class="lead"><strong>Please check your email {{email}} </strong> for further instructions on how to complete your account setup.</p>
