--- a/homeowner/templates/homeowner/unsubscribe.html
+++ b/homeowner/templates/homeowner/unsubscribe.html
@@ -2,10 +2,10 @@
 
 {% block content %}
     <div class="container">
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="jumbotron text-center">
                 <h1 class="display-3">Unsubscribed Successfully!</h1>
-                <p class="lead"><strong>It's sad to see you leave</strong> for further instructions on how to complete your account setup.</p>
+                <p class="lead"><strong>It's sad to see you leave</strong></p>
                 <hr>
                 <p class="lead">
                   <a class="btn btn-primary btn-sm" href="{% url 'homeowner:home' %}" role="button">Continue to homepage</a>
